Hoàn thành việc xuất ra danh sách nhân viên, tối ưu hóa image lưu vào db.

--- a/WebApp/WebApp.csproj
+++ b/WebApp/WebApp.csproj
@@ -2594,6 +2594,7 @@
     <Content Include="CKFinderScripts\lang\bs.json" />
     <Content Include="CKFinderScripts\lang\bg.json" />
     <Content Include="CKFinderScripts\lang\az.json" />
+    <Content Include="Areas\Admin\Views\Employee\Index.cshtml" />
     <None Include="Scripts\jquery-3.4.1.intellisense.js" />
     <Content Include="Scripts\jquery-3.4.1.js" />
     <Content Include="Scripts\jquery-3.4.1.min.js" />
