thêm mới connectingString: laptop + PC

--- a/Model/App.config
+++ b/Model/App.config
@@ -10,7 +10,12 @@
       <provider invariantName="System.Data.SqlClient" type="System.Data.Entity.SqlServer.SqlProviderServices, EntityFramework.SqlServer" />
     </providers>
   </entityFramework>
+  <!--LAPTOP-->
   <connectionStrings>
-    <add name="WebAppDbContext" connectionString="data source=DESKTOP-THH\SQLEXPRESS;initial catalog=webApp;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework" providerName="System.Data.SqlClient" />
+    <add name="WebAppDbContext" connectionString="Data Source=DESKTOP-4RGM7KN\SQLEXPRESS;Initial Catalog=webApp;Integrated Security=True;MultipleActiveResultSets=True;App=EntityFramework" providerName="System.Data.SqlClient" />
   </connectionStrings>
+  <!--PC-->
+  <!--<connectionStrings>
+    <add name="WebAppDbContext" connectionString="data source=DESKTOP-THH\SQLEXPRESS;initial catalog=webApp;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework" providerName="System.Data.SqlClient" />
+  </connectionStrings>-->
 </configuration>
