--- a/Model/Model.csproj
+++ b/Model/Model.csproj
@@ -78,5 +78,8 @@
   <ItemGroup>
     <Content Include="Content\PagedList.css" />
   </ItemGroup>
+  <ItemGroup>
+    <Folder Include="CK\" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
