Fixed: sửa lỗi cập nhật thông tin nhân viên trùng tài khoản hoặc mã nhân viên

--- a/Model/Model.csproj
+++ b/Model/Model.csproj
@@ -60,6 +60,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Dao\EmployeeDao.cs" />
+    <Compile Include="EF\Credential.cs" />
     <Compile Include="EF\Customer.cs" />
     <Compile Include="EF\DayOff.cs" />
     <Compile Include="EF\Employee.cs" />
