--- a/Model/Model.csproj
+++ b/Model/Model.csproj
@@ -62,16 +62,20 @@
     <Compile Include="Dao\DayOffDao.cs" />
     <Compile Include="Dao\EmployeeDao.cs" />
     <Compile Include="Dao\DailyListDao.cs" />
+    <Compile Include="Dao\RevenueExpenditureDao.cs" />
     <Compile Include="Dao\ViolatorDao.cs" />
+    <Compile Include="Dao\ViolatorKTVDao.cs" />
     <Compile Include="EF\Credential.cs" />
     <Compile Include="EF\Customer.cs" />
     <Compile Include="EF\DailyList.cs" />
     <Compile Include="EF\DayOff.cs" />
     <Compile Include="EF\Employee.cs" />
+    <Compile Include="EF\RevenueExpenditure.cs" />
     <Compile Include="EF\Role.cs" />
     <Compile Include="EF\Taxi.cs" />
     <Compile Include="EF\UserGroup.cs" />
     <Compile Include="EF\Violator.cs" />
+    <Compile Include="EF\ViolatorKTV.cs" />
     <Compile Include="EF\WebAppDbContext.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
