--- a/WebApp/WebApp.csproj
+++ b/WebApp/WebApp.csproj
@@ -160,6 +160,8 @@
     <Compile Include="Areas\Admin\Controllers\HomeController.cs" />
     <Compile Include="Areas\Admin\Controllers\DailyListController.cs" />
     <Compile Include="Areas\Admin\Controllers\LoginController.cs" />
+    <Compile Include="Areas\Admin\Controllers\RevenueExpenditureController.cs" />
+    <Compile Include="Areas\Admin\Controllers\ViolatorKTVController.cs" />
     <Compile Include="Areas\Admin\Controllers\ViolatorController.cs" />
     <Compile Include="Areas\Admin\Models\LoginModel.cs" />
     <Compile Include="Common\CommonConstants.cs" />
@@ -1617,6 +1619,14 @@
     <Content Include="Areas\Admin\Views\DayOff\Edit.cshtml" />
     <Content Include="Areas\Admin\Views\DailyList\Create.cshtml" />
     <Content Include="Areas\Admin\Views\DailyList\Index.cshtml" />
+    <Content Include="Areas\Admin\Views\DailyList\Edit.cshtml" />
+    <Content Include="Areas\Admin\Views\RevenueExpenditure\Create.cshtml" />
+    <Content Include="Areas\Admin\Views\RevenueExpenditure\Index.cshtml" />
+    <Content Include="Areas\Admin\Views\RevenueExpenditure\Edit.cshtml" />
+    <Content Include="Areas\Admin\Views\ViolatorKTV\Index.cshtml" />
+    <Content Include="Areas\Admin\Views\ViolatorKTV\Create.cshtml" />
+    <Content Include="Areas\Admin\Views\ViolatorKTV\Edit.cshtml" />
+    <Content Include="Areas\Admin\Views\DailyList\TaxiIndex.cshtml" />
     <None Include="Properties\PublishProfiles\registry.hub.docker.com_wujor01.pubxml" />
     <None Include="Scripts\jquery-3.4.1.intellisense.js" />
     <Content Include="Scripts\jquery-3.4.1.js" />
