--- a/Model/Model.csproj
+++ b/Model/Model.csproj
@@ -70,12 +70,14 @@
     <Compile Include="EF\DailyList.cs" />
     <Compile Include="EF\DayOff.cs" />
     <Compile Include="EF\Employee.cs" />
+    <Compile Include="EF\ReExType.cs" />
     <Compile Include="EF\RevenueExpenditure.cs" />
     <Compile Include="EF\Role.cs" />
     <Compile Include="EF\Taxi.cs" />
     <Compile Include="EF\UserGroup.cs" />
     <Compile Include="EF\Violator.cs" />
     <Compile Include="EF\ViolatorKTV.cs" />
+    <Compile Include="EF\ViolatorType.cs" />
     <Compile Include="EF\WebAppDbContext.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
