Cập nhật: - Thêm mới bảng Department để phân chia chi nhánh cho user, phân quyền quản lý.

--- a/Model/Model.csproj
+++ b/Model/Model.csproj
@@ -69,6 +69,7 @@
     <Compile Include="EF\Customer.cs" />
     <Compile Include="EF\DailyList.cs" />
     <Compile Include="EF\DayOff.cs" />
+    <Compile Include="EF\Department.cs" />
     <Compile Include="EF\Employee.cs" />
     <Compile Include="EF\ReExType.cs" />
     <Compile Include="EF\RevenueExpenditure.cs" />
