--- a/Model/packages.config
+++ b/Model/packages.config
@@ -6,5 +6,6 @@
   <package id="PagedList" version="1.17.0.0" targetFramework="net45" />
   <package id="PagedList.Mvc" version="4.5.0.0" targetFramework="net45" />
   <package id="System.Net.Http" version="4.3.4" targetFramework="net45" />
+  <package id="System.Web.Helpers.Crypto" version="3.2.3" targetFramework="net45" />
   <package id="System.Web.Providers" version="1.2" targetFramework="net45" />
 </packages>
