Cập nhật: - Phân chia chi nhánh, quản lý chi nhánh - Thêm 2 bảng mới - Thêm 1 UserGroup - Tạo phần thu gọn mở rộng trong DailyList để hiển thị hoặc ẩn phần thông tin của Grab-Taxi-CTV khi cần thì click vào button - Thay đổi giao diện droplist, có thể tìm kiếm trong droplist bằng bootstrap chosen cài đặt ở Nuget - Tối ưu CSDL

--- a/Model/Model.csproj
+++ b/Model/Model.csproj
@@ -62,10 +62,13 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Dao\CustomerDao.cs" />
     <Compile Include="Dao\DayOffDao.cs" />
+    <Compile Include="Dao\DeparmentDao.cs" />
     <Compile Include="Dao\EmployeeDao.cs" />
     <Compile Include="Dao\DailyListDao.cs" />
     <Compile Include="Dao\RevenueExpenditureDao.cs" />
+    <Compile Include="Dao\TicketDao.cs" />
     <Compile Include="Dao\ViolatorDao.cs" />
     <Compile Include="Dao\ViolatorKTVDao.cs" />
     <Compile Include="EF\Credential.cs" />
@@ -78,6 +81,7 @@
     <Compile Include="EF\RevenueExpenditure.cs" />
     <Compile Include="EF\Role.cs" />
     <Compile Include="EF\Taxi.cs" />
+    <Compile Include="EF\Ticket.cs" />
     <Compile Include="EF\UserGroup.cs" />
     <Compile Include="EF\Violator.cs" />
     <Compile Include="EF\ViolatorKTV.cs" />
