--- a/WebApp/WebApp.csproj
+++ b/WebApp/WebApp.csproj
@@ -155,6 +155,7 @@
     <Compile Include="App_Start\RouteConfig.cs" />
     <Compile Include="Areas\Admin\AdminAreaRegistration.cs" />
     <Compile Include="Areas\Admin\Controllers\BaseController.cs" />
+    <Compile Include="Areas\Admin\Controllers\CustomerController.cs" />
     <Compile Include="Areas\Admin\Controllers\DayOffController.cs" />
     <Compile Include="Areas\Admin\Controllers\EmployeeController.cs" />
     <Compile Include="Areas\Admin\Controllers\HomeController.cs" />
@@ -1277,10 +1278,13 @@
     <Content Include="assets\admin\pages\panels-wells.html" />
     <Content Include="assets\admin\pages\tables.html" />
     <Content Include="assets\admin\pages\typography.html" />
+    <Content Include="Content\bootstrap-chosen.css" />
     <Content Include="Content\bootstrap-theme.css" />
     <Content Include="Content\bootstrap-theme.min.css" />
     <Content Include="Content\bootstrap.css" />
     <Content Include="Content\bootstrap.min.css" />
+    <Content Include="Content\chosen-sprite%402x.png" />
+    <Content Include="Content\chosen-sprite.png" />
     <Content Include="Content\PagedList.css" />
     <Content Include="favicon.ico" />
     <Content Include="fonts\glyphicons-halflings-regular.svg" />
@@ -1627,8 +1631,12 @@
     <Content Include="Areas\Admin\Views\ViolatorKTV\Create.cshtml" />
     <Content Include="Areas\Admin\Views\ViolatorKTV\Edit.cshtml" />
     <Content Include="Areas\Admin\Views\DailyList\TaxiIndex.cshtml" />
+    <Content Include="Content\bootstrap-chosen.scss" />
+    <Content Include="Content\bootstrap-chosen.less" />
     <None Include="Properties\PublishProfiles\registry.hub.docker.com_wujor01.pubxml" />
     <None Include="Scripts\jquery-3.4.1.intellisense.js" />
+    <Content Include="Scripts\chosen.jquery.js" />
+    <Content Include="Scripts\chosen.jquery.min.js" />
     <Content Include="Scripts\jquery-3.4.1.js" />
     <Content Include="Scripts\jquery-3.4.1.min.js" />
     <Content Include="Scripts\jquery-3.4.1.slim.js" />
@@ -1660,6 +1668,7 @@
     <Folder Include="App_Data\" />
     <Folder Include="Areas\Admin\Data\Employee\img\" />
     <Folder Include="Areas\Admin\Views\Base\" />
+    <Folder Include="Areas\Admin\Views\Customer\" />
     <Folder Include="Data\" />
     <Folder Include="Models\" />
   </ItemGroup>
