Cập nhật: -- disable enter submit -- Tối ưu hóa giao diện -- Tạo bảng mới để cập nhật tình trạng CODE giảm giá

--- a/Model/Model.csproj
+++ b/Model/Model.csproj
@@ -86,6 +86,7 @@
     <Compile Include="EF\Violator.cs" />
     <Compile Include="EF\ViolatorKTV.cs" />
     <Compile Include="EF\ViolatorType.cs" />
+    <Compile Include="EF\Voucher.cs" />
     <Compile Include="EF\WebAppDbContext.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
