--- a/WebApp/Web.config
+++ b/WebApp/Web.config
@@ -25,6 +25,8 @@
   <system.web>
     <compilation debug="true" targetFramework="4.5" />
     <httpRuntime targetFramework="4.5" />
+    <!--Giá trị session timeout-->
+    <sessionState timeout="30"></sessionState>
   </system.web>
   <runtime>
     <assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
