Cập nhật: -- Tự Generate code mới + hết hạn trong 7 ngày.

--- a/WebApp/WebApp.csproj
+++ b/WebApp/WebApp.csproj
@@ -1635,6 +1635,8 @@
     <Content Include="Content\bootstrap-chosen.less" />
     <Content Include="Areas\Admin\Views\DailyList\CodeIndex.cshtml" />
     <Content Include="Areas\Admin\Views\DailyList\Detail.cshtml" />
+    <Content Include="Areas\Admin\Views\DailyList\CodeCreate.cshtml" />
+    <Content Include="Areas\Admin\Views\DailyList\CodeDetail.cshtml" />
     <None Include="Properties\PublishProfiles\registry.hub.docker.com_wujor01.pubxml" />
     <None Include="Scripts\jquery-3.4.1.intellisense.js" />
     <Content Include="Scripts\chosen.jquery.js" />
