--- a/WebApp/packages.config
+++ b/WebApp/packages.config
@@ -19,5 +19,6 @@
   <package id="Newtonsoft.Json" version="12.0.2" targetFramework="net45" />
   <package id="PagedList" version="1.17.0.0" targetFramework="net45" />
   <package id="PagedList.Mvc" version="4.5.0.0" targetFramework="net45" />
+  <package id="System.Globalization" version="4.3.0" targetFramework="net45" />
   <package id="WebGrease" version="1.6.0" targetFramework="net45" />
 </packages>
