--- a/Model/App.config
+++ b/Model/App.config
@@ -13,6 +13,7 @@
   <!--LAPTOP-->
   <connectionStrings>
     <add name="WebAppDbContext" connectionString="Data Source=DESKTOP-4RGM7KN\SQLEXPRESS;Initial Catalog=webApp;Integrated Security=True;MultipleActiveResultSets=True;App=EntityFramework" providerName="System.Data.SqlClient" />
+    <add name="webAppEntities" connectionString="metadata=res://*/linqtosql.WebApp.csdl|res://*/linqtosql.WebApp.ssdl|res://*/linqtosql.WebApp.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=DESKTOP-4RGM7KN\SQLEXPRESS;initial catalog=webApp;integrated security=True;multipleactiveresultsets=True;application name=EntityFramework&quot;" providerName="System.Data.EntityClient" />
   </connectionStrings>
   <!--PC-->
   <!--<connectionStrings>
