--- a/Model/Model.csproj
+++ b/Model/Model.csproj
@@ -115,6 +115,7 @@
     <Compile Include="EF\Voucher.cs" />
     <Compile Include="EF\WebAppDbContext.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="TimerModel.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
