--- a/Model/Model.csproj
+++ b/Model/Model.csproj
@@ -114,6 +114,7 @@
     <Compile Include="EF\ViolatorType.cs" />
     <Compile Include="EF\Voucher.cs" />
     <Compile Include="EF\WebAppDbContext.cs" />
+    <Compile Include="InvoiceModel.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="TimerModel.cs" />
   </ItemGroup>
