Cập nhật: - Chuyển CSDL sang SQL 2008 R2 - Tạo mới MVC Credential - KTV chỉ hiện khi đã chấm công trong ngày hôm đó

--- a/Model/App.config
+++ b/Model/App.config
@@ -12,8 +12,7 @@
   </entityFramework>
   <!--LAPTOP-->
   <connectionStrings>
-    <add name="WebAppDbContext" connectionString="Data Source=DESKTOP-4RGM7KN\SQLEXPRESS;Initial Catalog=webApp;Integrated Security=True;MultipleActiveResultSets=True;App=EntityFramework" providerName="System.Data.SqlClient" />
-    <add name="webAppEntities" connectionString="metadata=res://*/linqtosql.WebApp.csdl|res://*/linqtosql.WebApp.ssdl|res://*/linqtosql.WebApp.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=DESKTOP-4RGM7KN\SQLEXPRESS;initial catalog=webApp;integrated security=True;multipleactiveresultsets=True;application name=EntityFramework&quot;" providerName="System.Data.EntityClient" />
+    <add name="WebAppDbContext" connectionString="Data Source=DESKTOP-4RGM7KN;Initial Catalog=webApp;Integrated Security=True;MultipleActiveResultSets=True;App=EntityFramework" providerName="System.Data.SqlClient" />
   </connectionStrings>
   <!--PC-->
   <!--<connectionStrings>
