--- a/WebApp/Web.config
+++ b/WebApp/Web.config
@@ -10,7 +10,7 @@
     </configSections>
   <!--LAPTOP-->
   <connectionStrings>
-    <add name="WebAppDbContext" connectionString="Data Source=DESKTOP-4RGM7KN\SQLEXPRESS;Initial Catalog=webApp;Integrated Security=True;MultipleActiveResultSets=True;App=EntityFramework" providerName="System.Data.SqlClient" />
+    <add name="WebAppDbContext" connectionString="Data Source=DESKTOP-4RGM7KN;Initial Catalog=webApp;Integrated Security=True;MultipleActiveResultSets=True;App=EntityFramework" providerName="System.Data.SqlClient" />
   </connectionStrings>
   <!--PC-->
   <!--<connectionStrings>
